--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section class="home" id="home">
         <div class="hero-info">
-            <h3>Bienvenid@ a mi página</h3>
+            <h3>Bienvenidos, desde Argentina</h3>
             <h1>Soy Sofía Soto</h1>
             
             <div class="text-animate">
