--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h2>Desarrolladora F.S.<br> Analista de Datos <br> Estudiante de Ciberseguridad</h2>
             </div>
             
-            <p>Disfruto crear sistemas, desde el diseño/análisis hasta la publicación, y administración de la base de datos. Comencé en el año 2019 con sistemas de escritorio, continué con webs, y luego avancé sobre big data. Actualmente estoy estudiando INTELIGENCIA ARTIFICIAL.</p>
+            <p>Disfruto crear sistemas, desde el diseño/análisis hasta la publicación, y administración de la base de datos. Comencé en el año 2019 con sistemas de escritorio, continué con webs, y luego avancé sobre big data. Actualmente estoy <span>estudiando la Licenciatura en Ciberseguridad en la Universidad de palermo.</span></p>
             
 
             <div class="btn-box">
