--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                     
                     <div class="text-box">
                         <p>➼ Cursando:</p>
-                        <span>Big Data e Inteligencia Artificial.</span
                         <span>Ciberseguridad en la Universidad de Palermo.</span>
+                        <span>Big Data e IA</span>
                     </div>
                     
                     <div class="text-box">
